--- a/popup.html
+++ b/popup.html
@@ -53,11 +53,6 @@
       margin-bottom: 5px;
       border-radius: 3px;
     }
-    #userEmail {
-      margin-bottom: 10px;
-      font-size: 14px;
-      color: #333;
-    }
   </style>
 </head>
 <body>
@@ -71,16 +66,10 @@
       <option value="brave">Brave</option>
     </select>
     <button id="searchBtn">検索</button>
-    <button id="clearHistoryBtn">履歴を消去</button>
-    <hr>
-    <ul id="searchHistory"></ul>
-    <hr>
     <button id="openTabsBtn">タブの管理</button>
     <button id="blockAdsBtn">広告をブロック</button>
     <button id="summaryBtn">ページの要約</button>
-    <button id="loginBtn">Googleアカウントでログイン</button>
-    <p id="userEmail"></p>
-    <button id="syncBtn">検索履歴を同期</button>
+    <button id="CustomizationBtn">カスタマイズ設定</button>
   </div>
 
   <script src="popup.js"></script>
